Restruct Folder & file

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,10 +49,10 @@ flutter:
    - assets/icon/back.png
    - assets/icon/buahApel.png
 
-  fonts:
-   - family:  MyFlutterApp
-     fonts:
-      - asset: assets/font/MyFlutterApp.ttf
+#  fonts:
+#   - family:  MyFlutterApp
+#     fonts:
+#      - asset: assets/font/MyFlutterApp.ttf
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
