--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
+  fluttertoast: ^3.1.3
+  path_provider: ^1.3.0
+  video_player: ^0.10.2+1
+  image_picker_saver: ^0.3.0
 
 dev_dependencies:
   flutter_test:
