--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,10 @@ dependencies:
   path_provider: ^1.3.0
   video_player: ^0.10.2+1
   image_picker_saver: ^0.3.0
+  http: ^0.12.0+2
+  global_configuration: ^1.4.0
+  requests: ^2.0.1
+  image_picker: ^0.6.1+4
 
 dev_dependencies:
   flutter_test:
@@ -83,6 +87,7 @@ flutter:
    - assets/icon/kalkulator.png
    - assets/icon/pakar.png
    - assets/text/embunTepung.txt
+   - lib/dashboard.json
 
 #  fonts:
 #   - family:  MyFlutterApp
