--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,9 @@ dependencies:
   global_configuration: ^1.4.0
   requests: ^2.0.1
   image_picker: ^0.6.1+4
+  firebase_auth: ^0.14.0+5
+  google_sign_in: ^4.0.7
+
 
 dev_dependencies:
   flutter_test:
