--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,9 +33,16 @@ dependencies:
   global_configuration: ^1.4.0
   requests: ^2.0.1
   image_picker: ^0.6.1+4
+  firebase_core: ^0.4.0+8
   firebase_auth: ^0.14.0+5
   google_sign_in: ^4.0.7
+  flutter_launcher_icons: ^0.7.3
 
+
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/image/logo.png"
 
 dev_dependencies:
   flutter_test:
